# claude-fleet

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRODUCT.md  README.md  SECURITY.md  index.html  package.json  vite.config.ts
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: App.css  App.tsx  main.tsx  runtimeAdapters.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/codex-bridge/: codex-orchestrator-chat.mjs  package.json
src-tauri/src/: app_state.rs  bus.rs  claude_sessions.rs  codex_chat.rs  lib.rs  main.rs  mcp_config.rs  pty.rs
src/components/: TerminalPane.tsx
